# hawk-desktop

./: .gitignore  CONTRIBUTING.md  LICENSE  meson.build
hawkdm/: main.c  meson.build  scall.c  scall.h
hawkwm/: meson.build  window-manager.c  wm.h
src/: main.c
